idf_component_register(SRCS "src/app.c" 
                            "src/app_internal.c" 
                            "src/mount.c" 
                            "src/wifi.c" 
                            "src/can.c" 
                            "src/gpio.c" 
                            "src/stm32ota.c"
                            "src/http_server.c" 
                            "src/uart.c"
                            "src/oled.c"
                            "components/SH1106/I2C_OLED.c"
                            "src/EKF_exe.c"
                            "src/EKF.c"
                            "src/EKFmath.c"
                            "src/Heading_MeasurementModel.c"
                            "src/Steering_MeasurementModel.c"
                            "src/Velocity_Measurement.c"
                            "src/GPS_Measurement.c"
                            "src/GPSPath.c"
                            "src/socket_tasks.c"
                            "src/tcp_server.c"
                            "src/json_utils.c"
                    INCLUDE_DIRS "."
                                "inc" 
                                "components/SH1106"                                 
                    EMBED_FILES "webpage/about.html"
                                "webpage/list.html" 
                                "webpage/ota.html" 
                                "webpage/wifimanager.html" 
                                "webpage/style.css"
                                "webpage/favicon.ico")
